--- a/web/css/site.css
+++ b/web/css/site.css
@@ -89,3 +89,12 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+/** backend **/
+.clear-cache {
+    display: inline-block;
+    float: right;
+    height: 50px;
+    line-height: 50px;
+    margin: 0 20px;
+}
