--- a/assets/protected/css/backend.css
+++ b/assets/protected/css/backend.css
@@ -23,3 +23,9 @@
 .b-settings-form__row{
     margin-bottom:10px;
 }
+.field-product-category_ids label{
+    display: block;
+}
+.b-backend-product__main_category{
+    width:300px;
+}
